--- a/templates/Default/homepage.html.twig
+++ b/templates/Default/homepage.html.twig
@@ -12,10 +12,10 @@
                 <a href="{{ path('author_index') }}">Authors</a>
             </li>
             <li>
-                Publishers
+                <a href="{{ path('publisher_index') }}">Publishers</a>
             </li>
             <li>
-                Books
+                <a href="{{ path('book_index') }}">Books</a>
             </li>
         </ul>
     </div>
