Fixed some titles in templates

--- a/templates/Book/update.html.twig
+++ b/templates/Book/update.html.twig
@@ -1,7 +1,7 @@
 {# templates/Book/update.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Insert book{% endblock %}
+{% block title %}Edit {{ book.name }}{% endblock %}
 
 {% block body %}
     <div>
