--- a/templates/Author/update.html.twig
+++ b/templates/Author/update.html.twig
@@ -1,7 +1,7 @@
 {# templates/Author/update.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Insert author{% endblock %}
+{% block title %}Edit {{ author.firstName }} {{ author.lastName }}{% endblock %}
 
 {% block body %}
     <div>
